Replace slides list by dynamic getting URLs from service Unsplash API.

--- a/index.html
+++ b/index.html
@@ -10,5 +10,20 @@
 </head>
 <body>
     <div id="imagePiece"></div>
+    <div id="apiParams">
+        <div class="section">
+            <label for="api-key">API access key:</label>
+            <input type="text" name="api-key" id="api-key">
+        </div>
+        <div class="section">
+            <label for="query">Category or keyword:</label>
+            <input type="text" name="api-query" id="api-query">
+        </div>
+        <div class="action">
+            <button id="run-query">OK</button>
+            <button id="close-box">Cancel</button>
+        </div>
+    </div>
+    <div id="openParams">&#9881;</div>
 </body>
 </html>
