Bug fix: check if piece element exists before getting its properties.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <button id="run-query">OK</button>
             <button id="close-box">Cancel</button>
         </div>
+        <div class="help">
+            <a href="https://unsplash.com/documentation#creating-a-developer-account" target="_blank">Help</a>
+        </div>
     </div>
     <div id="openParams">&#9881;</div>
 </body>
