--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </div>
         <div class="help">
             <a href="https://unsplash.com/documentation#creating-a-developer-account" target="_blank">Help</a>
+            <span>Key error</span>
         </div>
     </div>
     <div id="openParams">&#9881;</div>
